# sdl-game-development

./: .gitignore  .gitmodules  Makefile  README.md
alien_attack/: CMakeLists.txt
alien_attack/assets/: map1 (copy).tmx  map1.tmx  map1_old.tmx  test.xml
alien_attack/include/: AnimatedGraphic.h  AnimatedGraphicCreator.h  Enemy.h  Game.h  GameObject.h  GameObjectFactory.h  Glider.h  GliderCreator.h  Layer.h  LevelParser.h  MainMenuState.h  MenuButton.h  MenuButtonCreator.h  PauseState.h  PlayState.h  Player.h  PlayerCreator.h  ScrollingBackground.h  ShooterObject.h  TextureManager.h  TileLayer.h
alien_attack/output/: main
alien_attack/src/: AnimatedGraphic.cpp  CMakeLists.txt  Enemy.cpp  Game.cpp  GameObject.cpp  GameObjectFactory.cpp  GameOverState.cpp  Glider.cpp  Level.cpp  LevelParser.cpp  MainMenuState.cpp  MenuButton.cpp  ObjectLayer.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  ScrollingBackground.cpp  ShooterObject.cpp  SoundManager.cpp  StateParser.cpp  TextureManager.cpp
assets/: blocks1.tsx  map1.tmx
include/: AnimatedGraphic.h  Enemy.h  EnemyCreator.h  Game.h  GameObject.h  GameOverState.h  GameState.h  GameStateMachine.h  InputHandler.h  Level.h  LevelParser.h  LoaderParams.h  MenuButton.h  MenuState.h  ObjectLayer.h  PauseState.h  PlayState.h  Player.h  SDLGameObject.h  TextureManager.h  TileLayer.h  Utils.h  Vector2D.h
output/: main
src/: AnimatedGraphic.cpp  Enemy.cpp  Game.cpp  GameObject.cpp  GameOverState.cpp  GameStateMachine.cpp  InputHandler.cpp  Level.cpp  LevelParser.cpp  LoaderParams.cpp  MenuButton.cpp  MenuState.cpp  PlayState.cpp  (+7 more)
(+27 files in other folders)
